ready to release 2.10

--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+2015-03-13  k  <andk@cpan.org>
+
+	* release 2.10
+
+	* same code as 2.10-TRIAL
+
 2015-02-22  k  <andk@cpan.org>
 
 	* release 2.10-TRIAL
