--- a/Changes
+++ b/Changes
@@ -1,3 +1,17 @@
+2017-02-14  k  <andk@cpan.org>
+
+	* release 2.16
+
+	* four weeks after the TRIAL2 release cpantesters have produced
+	392 pass and 5 fail; by my estimation the fails are two bugs in
+	the test suite: (1) insufficient rubustness against make -j and
+	(2) insufficient robustness against missing unzip program; both
+	will be targeted at a later date
+
+	* otherwise no functional change; only changes in the distroprefs/
+	directory (which is not used per default) and minor changes to
+	Makefile.PL and t/97*.t
+
 2017-01-16  k  <andk@cpan.org>
 
 	* release 2.16-TRIAL2
