--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+2020-06-13  k  <andk@cpan.org>
+
+	* release 2.28
+
+	* unchanged from 2.28-TRIAL
+
 2020-04-03  k  <andk@cpan.org>
 
 	* release 2.28-TRIAL
