--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+
+	* bundled MIRRORED.BY updated with latest copy at https://www.cpan.org/MIRRORED.BY,
+	  to reflect the sunset of the cpan mirror network
+
 2020-06-13  k  <andk@cpan.org>
 
 	* release 2.28
