--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+	* bundled MIRRORED.BY updated with latest copy at https://www.cpan.org/MIRRORED.BY,
+	  to reflect the sunset of the cpan mirror network
+
 2021-11-23  k  <andk@cpan.org>
 
 	* release 2.29
