--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+2021-11-22  k  <andk@cpan.org>
+
+	* release 2.29-TRIAL2
+
+	* fix wrong version number in user-dialogue
+
 2021-11-21  k  <andk@cpan.org>
 
 	* release 2.29-TRIAL
