--- a/Changes
+++ b/Changes
@@ -7,7 +7,9 @@
 	* typo fixes: "Consensus" not "Concensus" (Ricardo Signes)
 
 	* bundled MIRRORED.BY updated with latest copy at https://www.cpan.org/MIRRORED.BY,
-	  to reflect the sunset of the cpan mirror network (Karen Etheridge)
+	to reflect the sunset of the cpan mirror network (Karen Etheridge)
+
+	* Typo fix: s/SQLLite/SQLite (Samanta Navarro)
 
 2021-11-23  k  <andk@cpan.org>
 
