--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+2022-03-27  k  <andk@cpan.org>
+
+	* release 2.33
+
+	* code is unchanged from 2.33-TRIAL
+
+	* tiny distroprefs maintenance
+
 2022-01-21  k  <andk@cpan.org>
 
 	* release 2.33-TRIAL
