--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+2022-04-17  k  <andk@cpan.org>
+
+	* release 2.34
+
+	* unchanged from 2.34-TRIAL
+
 2022-04-03  k  <andk@cpan.org>
 
 	* release 2.34-TRIAL
