--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+2023-04-27  k  <andk@cpan.org>
+
+	* release 2.35
+
+	* unchanged from 2.35-TRIAL
+
 2023-04-15  k  <andk@cpan.org>
 
 	* release 2.35-TRIAL
