--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+2023-05-10  k  <andk@cpan.org>
+
+	* release 2.36-TRIAL
+
+	* https://github.com/andk/cpanpm/pull/178 -- Makefile.PL - Fix INSTALLDIRS (pgnd)
+
 2023-04-27  k  <andk@cpan.org>
 
 	* release 2.35
