--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+2023-05-14  k  <andk@cpan.org>
+
+	* release 2.36
+
+	* unchanged from 2.36-TRIAL
+
 2023-05-10  k  <andk@cpan.org>
 
 	* release 2.36-TRIAL
