--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+2024-08-30  Andreas Koenig  <andk@cpan.org>
+
+	* release 2.37
+
+	* unchanged from 2.37-TRIAL
+
 2024-08-18  Andreas Koenig  <andk@cpan.org>
 
 	* release 2.37-TRIAL
